Fix: Global Menu - Prevent layout shifts #207
Change parent layout from -moz-box to flex.

--- a/userChrome.css
+++ b/userChrome.css
@@ -861,6 +861,20 @@
   }
 
   /*= Global Menu - Set Padding ==============================================*/
+  /* Prevent layout shifts */
+  #toolbar-menubar {
+    display: flex !important;
+    flex-direction: row;
+    justify-content: space-between;
+  }
+  #toolbar-menubar > spacer {
+    order: 1000; /* as Original's -moz-box-ordinal-group: 1000 */
+    flex: 1; /* Fill row */
+  }
+  #toolbar-menubar > .titlebar-buttonbox-container {
+    order: 1000; /* as Original's -moz-box-ordinal-group: 1000 */
+  }
+
   /* Vertical Align - Center & Height: 100%  */
   #menubar-items,
   #main-menubar {
